--- a/data.yaml
+++ b/data.yaml
@@ -79,6 +79,11 @@ wifi:
     fast_roaming_enabled: true
     pmf_mode: optional
     wpa3_support: true
+ports:
+  hass:
+    native: Servers
+    allowed:
+      - IoT
 clients:
   10.0.0.1:
     hostname: gateway
@@ -206,6 +211,7 @@ clients:
     mac: 1c:69:7a:67:79:7f
     upstream: leaf
     port: 23
+    profile: hass
   10.0.1.91:
     hostname: kiosk-office
     network: Servers
@@ -457,7 +463,7 @@ clients:
   172.16.1.1:
     hostname: hass
     network: IoT
-    mac: 84:c5:a6:a4:98:09
+    mac: 1c:69:7a:67:79:80
   172.16.1.10:
     hostname: cam-sunroom
     network: IoT
