fix kelly watch

--- a/data.yaml
+++ b/data.yaml
@@ -719,4 +719,4 @@ clients:
   192.168.1.104:
     hostname: kelly-watch
     network: Standard
-    mac: c2:cf:b9:93:05:a3
+    mac: f6:aa:53:06:51:b3
