--- a/data.yaml
+++ b/data.yaml
@@ -716,3 +716,7 @@ clients:
     hostname: kelly-watch
     network: Standard
     mac: f6:aa:53:06:51:b3
+  192.168.1.105:
+    hostname: kelly-switch
+    network: Standard
+    mac: 64:b5:c6:c1:01:91
