--- a/data.yaml
+++ b/data.yaml
@@ -233,31 +233,31 @@ clients:
   10.0.1.110:
     hostname: influxdb
     network: Servers
-    mac: 52:54:a7:af:09:5c
+    mac: 52:54:c5:5b:a3:ac
   10.0.1.112:
     hostname: hub
     network: Servers
-    mac: 52:54:a3:47:c5:88
+    mac: 52:54:e1:6b:d8:16
   10.0.1.113:
     hostname: syslog
     network: Servers
-    mac: 52:54:b8:25:57:ec
+    mac: 52:54:87:31:83:a5
   10.0.1.114:
     hostname: metrics
     network: Servers
-    mac: 52:54:5e:73:8e:d0
+    mac: 52:54:26:0b:ba:83
   10.0.1.115:
     hostname: grafana
     network: Servers
-    mac: 52:54:51:ba:82:be
+    mac: 52:54:49:a1:11:93
   10.0.1.117:
     hostname: cultivator
     network: Servers
-    mac: 52:54:3c:49:43:96
+    mac: 52:54:be:29:b5:38
   10.0.1.118:
     hostname: unpoller
     network: Servers
-    mac: 52:54:a3:c2:40:f0
+    mac: 52:54:0f:0d:09:1a
   10.0.1.150:
     hostname: nas
     network: Servers
@@ -626,6 +626,18 @@ clients:
     hostname: smoke-guest
     network: IoT
     mac: cc:a7:c1:69:4b:3c
+  172.16.1.130:
+    hostname: gdo-truck
+    network: IoT
+    mac: 08:3a:8d:f6:22:dc
+  172.16.1.131:
+    hostname: gdo-jeep
+    network: IoT
+    mac: 08:3a:8d:f6:22:dd
+  172.16.1.132:
+    hostname: gdo-highlander
+    network: IoT
+    mac: 08:3a:8d:f6:22:de
   172.16.20.10:
     hostname: ps5
     network: Gaming
