--- a/data.yaml
+++ b/data.yaml
@@ -262,6 +262,10 @@ clients:
     hostname: heracles
     network: Servers
     mac: 52:54:e7:3f:24:35
+  10.0.1.121:
+    hostname: baby
+    network: Servers
+    mac: 52:54:54:9a:e4:fb
   10.0.1.150:
     hostname: nas
     network: Servers
